5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1596_2894.log
== TEST (2019-03-21 19:02:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????= float(input("360"))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    ????= float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:03:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var= float(input("360"))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:03:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var= float(input("360"))

# Calculo do valor a ser pago, incluindo o frete:
total = 45*8

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.144328
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:34:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=input("Instrucoes:")

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:35:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=input("Instrucoes:")

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.144219
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:41:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =x*8+45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total =x*8+45
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:42:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:43:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.275195
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 17:44:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
total=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 17:44:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
total=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.142684
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:09:54) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:10:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:10:50) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.188121
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:11:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
print(var)
-- OUTPUT:
360
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:12:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =8*45

# Impressao do valor total:
print(total)
print(var)
-- EXECUTION TIME:
0.202746
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
360
1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
360
356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
360
123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 18:13:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =50*8+45

# Impressao do valor total:
print(total)
print(var)
-- OUTPUT:
445
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 18:13:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =50*8+45

# Impressao do valor total:
print(total)
print(var)
-- EXECUTION TIME:
0.174211
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
445
1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
445
356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
445
123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:57:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total =

# Impressao do valor total:
print(var)
-- ERROR:
File "XXXX", line 8
    total =
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:57:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao
var=float(input("Qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*x+45

# Impressao do valor total:
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = 8*x+45
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:26) 
-- CODE:
unitario=float(input("valor do jogo?"))
quantidade=8
frete=45.0
total= unitario*quantidade+frete
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:39) 
-- CODE:
unitario=float(input("valor do jogo?"))
quantidade=8
frete=45.0
total= unitario*quantidade+frete
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:39) 
-- CODE:
unitario=float(input("valor do jogo?"))
quantidade=8
frete=45.0
total= unitario*quantidade+frete
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:08:16) 
-- CODE:
unitario=float(input("valor do jogo?"))
quantidade=8
frete=45.0
total= unitario*quantidade+frete
print(total)
-- EXECUTION TIME:
0.150535
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
